<!--
  ~ This file is part of Cosmic IDE.
  ~ Cosmic IDE is a free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~ Cosmic IDE is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License along with Cosmic IDE. If not, see <https://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Cosmic IDE Rewrite</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="import_project">Import Project</string>
    <string name="app_theme">App theme</string>

    <string name="projects">Projects</string>
    <string name="new_project">New Project</string>
    <string name="use_kotlin_template">Use Kotlin Template</string>
    <string name="enter_project_name">Enter project name</string>
    <string name="enter_package_name">Enter package name</string>

    <string name="create_project">Create project</string>
    <string name="action_compile">Compile</string>
    <string name="reload">Reload</string>
    <string name="cancel">Cancel</string>
    <string name="analytics_permission_title">Cosmic IDE Analytics</string>
    <string name="analytics_permission_message">Help us improve Cosmic IDE by providing anonymous statistics. We only collect basic non-personally identifiable information about your device for analyzing the user base. The data is transferred securely and no data is shared with third-parties. You can turn it off anytime from settings.</string>
    <string name="pref_theme_auto">System theme</string>
    <string name="pref_theme_light">Light theme</string>
    <string name="pref_theme_dark">Dark theme</string>
    <string name="download">Download</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="dependency_manager">Dependency Manager</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="action_chat">Chat with AI</string>
    <string name="completion_type">Completion type</string>
    <string name="enter_something">Enter something…</string>
    <string name="fast_jar_fs">Fast implementation for Jar FS</string>
    <string name="experimental_caution">This experimental mode may speed up compilation time, but use with caution</string>
    <string name="k2_compiler">K2 compiler for compilation</string>
    <string name="ssvm">SSVM for running</string>
    <string name="java_version">Java version</string>
    <string name="java_version_desc">Select the version of Java to use for compilation</string>
    <string name="additional_javac_flags">Additional Javac flags</string>
    <string name="additional_javac_flags_desc">Additional flags to pass to Javac</string>

    <!-- Strings used for compilation -->
    <string name="compiler">Compiler</string>
    <string name="compiling_java">Compiling Java code</string>
    <string name="compiling_kotlin">Compiling Kotlin code</string>
    <string name="compiling_class_files_to_dex">Compiling class files to dex</string>
    <string name="skipping_d8_ssvm_enabled">Skipping D8 compilation because SSVM is enabled.</string>
    <string name="assembling_jar">Assembling class files to JAR</string>
    <string name="failed_to_compile">Failed to compile %1$s code.</string>
    <string name="successfully_run">Successfully run %1$s.</string>
    <string name="bot_icon">Bot Icon</string>
    <string name="send_message">Send message</string>
    <string name="create_kotlin_class">Create kotlin class</string>
    <string name="delete">Delete</string>
    <string name="open_in_external_app">Open in external app</string>
    <string name="rename">Rename</string>
    <string name="create_file">Create File</string>
    <string name="create_folder">Create folder</string>
    <string name="create_java_class">Create java class</string>

    <string name="no_open_files">No open files</string>
    <string name="no_open_files_desc">Try opening the file with a file manager</string>
    <string name="commit_message">Commit Message</string>
    <string name="commit">Commit</string>
    <string name="remote_repository_url">Remote Repository URL</string>
    <string name="format_group_artifact_version">Format: group:artifact:version</string>
    <string name="enter_dependency">Enter Dependency</string>
    <string name="push_to_remote">Push to remote</string>
    <string name="pull_from_remote">Pull from remote</string>
    <string name="rebase">Rebase</string>
    <string name="pull">Pull</string>
    <string name="commits">Commits</string>
    <string name="clone">Cloning…</string>
    <string name="execute_custom_command_with_jgit">Execute custom command with JGit</string>
    <string name="enter_jgit_command">Enter JGit command</string>
    <string name="execute">Execute</string>
    <string name="add_all">Add all</string>
    <string name="staging_area">Staging Area</string>
    <string name="install_required_resources">Install required resources</string>
    <string name="clone_from_git">Clone from Git</string>
    <string name="class_name">Class name</string>
    <string name="no_projects_found_create_one_now">No projects found. Create one now!</string>
    <string name="install_resource_description">Cosmic IDE requires certain resources to build and run your projects. Press the button below to initiate the download process and configure them.</string>
    <string name="resource_description">This will download and configure the following resources: \n• index.json (Required for Java code completion)</string>
    <string name="install">Install</string>
    <string name="navigation_item_kind">Navigation Item Kind</string>
    <string name="clear">Clear</string>
    <string name="git">Git</string>
    <string name="format">Format</string>
    <string name="navigation_elements">Navigation Elements</string>
    <string name="close_tab">Close Tab</string>
    <string name="close_all_tabs">Close All Tabs</string>
    <string name="close_other_tabs">Close Other Tabs</string>
    <string name="close_left_tab">Close Left Tab</string>
    <string name="close_right_tab">Close Right Tab</string>
    <string name="backup">Backup</string>
    <string name="program_arguments">Program Arguments</string>
    <string name="advanced">Advanced</string>
    <string name="gemini_pro">Gemini Pro</string>
</resources>
